Use fixed-sized margins on logo rather than percentage, to make aligning with the rest of the page easier

--- a/assets/src/styles/partials/_header.scss
+++ b/assets/src/styles/partials/_header.scss
@@ -26,10 +26,10 @@
     img {
       vertical-align: bottom;
       height: 44px;
-      margin: 5%;
+      margin: .5em;
       @include media($small-screen) {
         height: 51px;
-        margin: 10%;
+        margin: 1em;
       }
       @include media($medium-screen) {
         height: 58px;
